kubernetes/polkassembly/chain-db-watcher-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  labels:
    app: chain-db-watcher
  name: chain-db-watcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chain-db-watcher
  template:
    metadata:
      labels:
        app: chain-db-watcher
    spec:
      containers:
      - name: chain-db-watcher
        image: gcr.io/test-installations-222013/polkassembly-chain-db-watcher:master
        imagePullPolicy: Always
