kubernetes/polkassembly/hasura-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  labels:
    app: hasura
  name: hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      containers:
      - env:
        - name: HASURA_GRAPHQL_DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: HASURA_GRAPHQL_DATABASE_URL
              name: hasura-config
        - name: HASURA_GRAPHQL_ENABLE_CONSOLE
          valueFrom:
            configMapKeyRef:
              key: HASURA_GRAPHQL_ENABLE_CONSOLE
              name: hasura-config
        - name: HASURA_GRAPHQL_ENABLED_LOG_TYPES
          valueFrom:
            configMapKeyRef:
              key: HASURA_GRAPHQL_ENABLED_LOG_TYPES
              name: hasura-config
        - name: HASURA_GRAPHQL_ADMIN_SECRET
          valueFrom:
            configMapKeyRef:
              key: HASURA_GRAPHQL_ADMIN_SECRET
              name: hasura-config
        - name: HASURA_GRAPHQL_JWT_SECRET
          valueFrom:
            configMapKeyRef:
              key: HASURA_GRAPHQL_JWT_SECRET
              name: hasura-config
        - name: HASURA_GRAPHQL_UNAUTHORIZED_ROLE
          valueFrom:
            configMapKeyRef:
              key: HASURA_GRAPHQL_UNAUTHORIZED_ROLE
              name: hasura-config
        - name: HASURA_POST_SUBSCRIPTION_HOOK
          valueFrom:
            configMapKeyRef:
              key: HASURA_POST_SUBSCRIPTION_HOOK
              name: hasura-config
        - name: HASURA_POST_SUBSCRIPTION_SECRET
          valueFrom:
            configMapKeyRef:
              key: HASURA_POST_SUBSCRIPTION_SECRET
              name: hasura-config
        image: hasura/graphql-engine:pull2395-7ea7f82c
        imagePullPolicy: IfNotPresent
        name: graphql-engine
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
