kubernetes/polkassembly/auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-server
  name: auth-server-service
spec:
  ports:
  - port: 8010
    protocol: TCP
    targetPort: 8010
  selector:
    app: auth-server
