kubernetes/polkassembly/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-end
  name: front-end-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: front-end
