kubernetes/polkassembly/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasura
  name: hasura-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hasura
