kubernetes/polkassembly/front-end-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-end-ingress
  labels:
    app: front-end
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "https,http"
spec:
  rules:
    - host: preview.polkassembly.io
      http:
        paths:
          - path: /
            backend:
              serviceName: front-end-service
              servicePort: http
